# gyazo-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: official-gyazo-mcp-tools.md  winget-test-plan.md
mcp-registry/: readme.md  server.yaml  tools.json
src/: app_state.rs  cli.rs  gyazo_api.rs  main.rs  mcp_oauth.rs  runtime_config.rs  server.rs  service.rs
src/auth/: config.rs  mcp_session_store.rs  mod.rs  oauth.rs  paths.rs  state.rs  token_store.rs
src/tools/: basic.rs  gyazo.rs  mod.rs
winget/: README.md
