[package]
name = "gyazo-mcp-server"
version = "0.1.0-beta.1"
edition = "2024"
description = "Local HTTP MCP server for Gyazo with MCP-standard login support"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rmcp = { version = "0.8.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["v4"] }
