[package]
name = "gyazo-mcp-server"
version = "0.1.0"
edition = "2024"
description = "Local HTTP MCP server for Gyazo with MCP-standard login support"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ishii-masaki-646/gyazo-mcp-server"
homepage = "https://github.com/ishii-masaki-646/gyazo-mcp-server"
documentation = "https://docs.rs/gyazo-mcp-server"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rmcp = { version = "0.8.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["v4"] }
